--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 - Centro de Aprendizaje Git</p>
+    <p>&copy; 2024 - Paul Espinosa</p>
 </footer>
 
 </body>
